--- a/contrib/debian/manpages/lambocoin-cli.1
+++ b/contrib/debian/manpages/lambocoin-cli.1
@@ -6,7 +6,7 @@ lambocoin-cli [options] <command> [params] \- Send command to Lambocoin Core.
 .TP
 lambocoin-cli [options] help \- Asks Lambocoin Core for a list of supported commands.
 .SH DESCRIPTION
-This manual page documents the lambocoin-cli program. lambocoin-cli is an RPC client used to send commands to Dogecoin Core.
+This manual page documents the lambocoin-cli program. lambocoin-cli is an RPC client used to send commands to Lambocoin Core.
 
 .SH OPTIONS
 .TP
