--- a/contrib/debian/manpages/lambocoind.1
+++ b/contrib/debian/manpages/lambocoind.1
@@ -6,9 +6,9 @@ lambocoin [options] <command> [params]
 .TP
 lambocoin [options] help <command> \- Get help for a command
 .SH DESCRIPTION
-This  manual page documents the lambocoind program. Dogecoin is a peer-to-peer digital currency. Peer-to-peer (P2P) means that there is no central authority to issue new money or keep track of transactions. Instead, these tasks are managed collectively by the nodes of the network. Advantages:
+This  manual page documents the lambocoind program. Lambocoin is a peer-to-peer digital currency. Peer-to-peer (P2P) means that there is no central authority to issue new money or keep track of transactions. Instead, these tasks are managed collectively by the nodes of the network. Advantages:
 
-Dogecoins can be sent easily through the Internet, without having to trust middlemen. Transactions are designed to be irreversible. Be safe from instability caused by fractional reserve banking and central banks. The limited inflation of the Dogecoin system’s money supply is distributed evenly (by CPU power) throughout the network, not monopolized by banks.
+Lambocoins can be sent easily through the Internet, without having to trust middlemen. Transactions are designed to be irreversible. Be safe from instability caused by fractional reserve banking and central banks. The limited inflation of the Lambocoin system’s money supply is distributed evenly (by CPU power) throughout the network, not monopolized by banks.
 
 .SH OPTIONS
 .TP
@@ -63,7 +63,7 @@ Allow JSON\-RPC connections from specified IP address
 \fB\-rpcconnect=\fR<ip>
 Send commands to node running on <ip>
 .PP
-SSL options: (see the Dogecoin Wiki for SSL setup instructions)
+SSL options: (see the Lambocoin Wiki for SSL setup instructions)
 .TP
 \fB\-rpcssl\fR=\fI1\fR
 Use OpenSSL (https) for JSON\-RPC connections
